@@ -5,6 +5,7 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
      ensure existing methods work with objects that do not have id_run,
      position, etc
  - remove superfluous method call from a template
+ - remove unused qc_chema property from TransferObjectFactory 
 
 release 63.1
  - label fix for rna_seqc in SeqQC viewer
